--- a/src/assets/template/css/modules/_common.scss
+++ b/src/assets/template/css/modules/_common.scss
@@ -297,7 +297,7 @@ body{
     margin-right: 12px;
     margin-top: 6px;
     width: 38px;
-    @media($bp-larger-than-desktopfullhd){
+    @media($bp-larger-than-desktophd){
       width: auto;
       margin-right: 20px;
     }
@@ -309,7 +309,7 @@ body{
     margin-top: -3px;
     margin-bottom: 2px;
     letter-spacing: -0.5px;
-    @media($bp-larger-than-desktopfullhd){
+    @media($bp-larger-than-desktophd){
       font-size: 28px;
     }
   }
@@ -317,7 +317,7 @@ body{
     color: $gray;
     font-size: 11px;
     text-transform: uppercase;
-    @media($bp-larger-than-desktopfullhd){
+    @media($bp-larger-than-desktophd){
       font-size: 13px;
     }
   }
@@ -340,7 +340,7 @@ body{
   &__digits-text{
     text-align: left;
     font-size: 9px;
-    color: #222;
+    color: #525152;
     font-weight: bold;
     text-transform: uppercase;
     line-height: 100%;
@@ -406,7 +406,7 @@ body{
     display: block;
     width: auto;
     //flex-grow: 1;
-    &:hover{
+    &.active{
       > a{
         &:after{
           opacity: 1;
@@ -435,6 +435,9 @@ body{
         right: 0;
         opacity: 0;
         transition: $cubic;
+      }
+      &:hover{
+        color: $blue;
       }
       /*
       &:hover{
@@ -533,6 +536,7 @@ body{
       color: #000;;
       font-size: 14px;
       text-decoration: none;
+      font-weight: normal;
       &:hover{
         text-decoration: underline;
       }
@@ -696,7 +700,7 @@ body{
   @media ($bp-larger-than-tablet) {
     padding: 51px 0 28px;
   }
-  @media ($bp-larger-than-desktopfullhd) {
+  @media ($bp-larger-than-desktophd) {
     display: block;
   }
   .separator{
@@ -1439,7 +1443,7 @@ ul.mdash{
   flex-wrap: wrap;
   width: 111px;
   display: none;
-  @media ($bp-larger-than-desktopfullhd) {
+  @media ($bp-larger-than-desktophd) {
     display: block;
   }
   &__bottom{
