--- a/src/assets/template/html/agent.html
+++ b/src/assets/template/html/agent.html
@@ -3,7 +3,7 @@
 	<div class="single-page">
 		<div class="container">
 			<div class="single-page__grid">
-				<div class="single-page__content">
+				<div class="single-page__content stext">
 
                     <div class="crumbs">
                         <ul class="breadcrumb">
