--- a/src/assets/template/html/gruz200.html
+++ b/src/assets/template/html/gruz200.html
@@ -118,6 +118,147 @@
             </div>
         </div>
     </div>
+
+    <div class="service-200-white">
+        <div class="container">
+            <div class="service-200-white__content stext">
+
+                <div class="gruz-200__columns">
+                    <div class="gruz-200__col">
+                        <h3>Груз 200: Перевоз самолетом</h3>
+                        <p>Этот способ используется, когда нужна срочность и/или нет других вариантов перевозки.</p>
+                        <p>Есть недостатки и риски: привезти груз в аэропорт нужно за 6 часов до вылета; для доставки контейнера к месту отправки и захоронения требуется спецтранспорт; нужен сопровождающий; всегда есть вероятность задержки вылета и незапланированной промежуточной посадки.</p>
+                    </div>
+                    <div class="gruz-200__col">
+                        <h3>Перевоз груза 200 поездом</h3>
+                        <p>Один из самых дешевых способов перевозки, когда не требуется срочность. Следует учитывать возможные задержки в пути, а также то, что везти груз 200 можно только в багажных вагонах, которые есть не в каждом поезде.</p>
+                    </div>
+                </div>
+
+                <a href="/calculator/" class="panel-gruz200">
+                    <div class="panel-gruz200__box">
+                        <div class="panel-gruz200__caption">Рассчитать стоимость груза 200 по РФ</div>
+                        <div class="panel-gruz200__text">Калькулятор расчета стоимости перевозки Груза 200</div>
+                        <span class="panel-gruz200-arrow">
+                            <span class="panel-gruz200-arrow__inner"></span>
+                        </span>
+                        <span class="panel-gruz200-small">
+                            <span class="panel-gruz200-small__inner"></span>
+                        </span>
+                    </div>
+                </a>
+
+                <div class="separator"><div class="separator__icon"></div></div>
+
+                <div class="service-200-docs">
+                    <div class="header1">Необходимые документы для перевозки груза 200</div>
+                    <p>Набор сопроводительных документов для отправки груза 200 зависит от того, надо ли перевозить его через границу РФ, а также от типа используемого транспорта.</p>
+                    <p>Максимально широкий пакет документов формируется при перевозке груза 200 через российскую границу.</p>
+                </div>
+                <div class="docs-200">
+                    <div class="docs-200__header">
+                        <div class="docs-200__title">Документ на перевозку груза 200</div>
+                        <div class="docs-200__title">Где получать</div>
+                    </div>
+                    <div class="docs-200__list">
+                        <div class="docs-200__row">
+                            <div class="docs-200__key">
+                                Гербовое свидетельство о смерти
+                            </div>
+                            <div class="docs-200__value">
+                                <ul>
+                                    <li>МФЦ или ЗАГС (если в РФ)</li>
+                                    <li>Консульство РФ или организация, регистрирующая смерть в данной стране</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row--alt">
+                            <div class="docs-200__key">
+                                Справка СЭС
+                            </div>
+                            <div class="docs-200__value">
+                                <ul>
+                                    <li>Роспотребнадзор (в РФ);</li>
+                                    <li>Уполномоченная организация в данной стране.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row">
+                            <div class="docs-200__key">
+                                Справка о невложении посторонних предметов
+                            </div>
+                            <div class="docs-200__value">
+                                Ритуальная компания, обеспечивающая перевозку груза 200
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row--alt">
+                            <div class="docs-200__key">
+                                Опись перевозимых с грузом 200 вещей и ценностей
+                            </div>
+                            <div class="docs-200__value">
+                                Ритуальная компания, обеспечивающая перевозку груза 200
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row">
+                            <div class="docs-200__key">
+                                Справка на вывоз тела в цинковом гробе
+                            </div>
+                            <div class="docs-200__value">
+                                Ритуальная компания, обеспечивающая перевозку груза 200
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row--alt">
+                            <div class="docs-200__key">
+                                Справка о качестве опайки металлического вкладыша
+                            </div>
+                            <div class="docs-200__value">
+                                Ритуальная компания, обеспечивающая перевозку груза 200
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row">
+                            <div class="docs-200__key">
+                                Заявление на таможенное декларирование
+                            </div>
+                            <div class="docs-200__value">
+                                Ритуальная компания, обеспечивающая перевозку груза 200
+                            </div>
+                        </div>
+                        <div class="docs-200__row docs-200__row--alt">
+                            <div class="docs-200__key">
+                                Разрешение от посольства/консульства страны назначения
+                            </div>
+                            <div class="docs-200__value">
+                                Консульство
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="service-200__bottom-text">
+                    <h2>Помощь в транспортировке тела покойного в иные регионы и страны</h2>
+                    <p>Сегодня люди стали очень мобильны, часто живут и работают вдали от дома. Только в Москве постоянно находится несколько миллионов человек, некоторое время назад постоянно проживавших в других регионах и даже странах. Но от превратностей жизни никто не застрахован. Иногда люди умирают, попадают в несчастные случаи, становятся жертвами преступников. В таком случае родственникам и близким человека потребуется транспортировка тела на родину будь-то Россия или другие страны. "МФЦ-Ритуал" готов оказать родным покойного специальную услугу – перевозка груз 200.</p>
+                    <p>Данное цифровое обозначение пришло к нам от армейских транспортников. Означает место в транспорте, отданное под перевозку тела умершего человека в специально оборудованном гробу. Наша компания также предлагает встречу в любом аэропорту города Москва груз 200, если ваш близкий скончался за границей.</p>
+                    <h3>Что нужно знать родственникам?</h3>
+                    <p>Перевозка груз 200 в регион РФ или страну захоронения начинается с выполнения следующих процедур:</p>
+                    <ul class="ndash">
+                        <li>Близкие люди должны получить в морге справку о смерти.</li>
+                        <li>Нужно забальзамировать покойного, заказать услуги специалиста косметолога (при необходимости).</li>
+                        <li>Получить гербовое Свидетельство о смерти. Его выдают органы ЗАГС МФЦ.</li>
+                        <li>Также нужно взять специальную справку в Роспотребнадзоре для вывоза груза 200 из России.</li>
+                        <li>Затем необходимо приобрести гроб и цинковый контейнер для его перевозки. Контейнер необходим в случае, если гроб пересечет границу или будет отправлен воздушным транспортом.</li>
+                        <li>Если вы выбрали для перевозки груз 200 самолет, то необходимо также забронировать билеты сопровождающим и место в багажном отделении для цинкового контейнера. Дело в том, что на практике авиакомпании не принимают на свой борт больше двух гробов с телами умерших людей.</li>
+                    </ul>
+                    <h3>Отправим груз 200 из Москвы любой регион РФ или в другую страну</h3>
+                    <p>Как видите, перевозка груз 200 – это непростая и ответственная задача. Чтобы снять все юридические проблемы надо знать множество тонкостей, уметь преодолевать бюрократические препоны. Особенно непросто бывает родным и близким покойного, которые приехали за телом в Москву из других регионов или стран. Они берут краткосрочный отпуск за свой счет и реально очень сильно ограничены во времени.</p>
+                    <p>Хорошим и разумным решением будет помощь профессионалов. "МФЦ-Ритуал" возьмет на быстрое решение подобных задач, отправит груз 200 по России, правильно оформит все необходимые сопроводительные документы, в том числе, нужные разрешительные документы для пересечения границы. Мы работаем на рынке ритуальных услуг столицы на протяжении уже многих лет, являемся одним из крупнейших похоронных агентств. Наши сотрудники готовы прийти к вам на помощь в любое время суток.</p>
+                    <p>Если вас постигла беда, мы в любое время дня или ночи готовы оказать всемерную помощь. Позвоните нам по номеру +7 (495) 532-88-62, чтобы узнать стоимость транспортировки Груза 200, и мы возьмем на себя, полностью или частично, хлопоты по организации скорбного ритуала.</p>
+                </div>
+                
+
+            </div>
+        </div>
+    </div>
     
 
 
