--- a/src/assets/template/css/modules/_gruz200.scss
+++ b/src/assets/template/css/modules/_gruz200.scss
@@ -1,6 +1,6 @@
 .service-200{
     background-color: $light-blue;
-    padding: 35px 0;
+    padding: 35px 0 50px;
     &__items{
         display: flex;
         justify-content: space-between;
@@ -106,6 +106,7 @@
     background: transparent url('/assets/template/images/consultation-form.png') center center no-repeat;
     background-size: cover;
     border-radius: 14px;
+    box-shadow: 0px 15px 15px 0px rgba(30, 55, 95, 0.1);
     &__caption{
         color: #222;
         text-transform: uppercase;
@@ -147,3 +148,274 @@
         margin-top: 14px;
     }
 }
+
+
+
+.panel-gruz200{
+    box-shadow: 0px 15px 15px 0px rgba(30, 55, 95, 0.1);
+    border-radius: 15px;
+    background: transparent url('/assets/template/images/panel-plane.jpg') center top no-repeat;
+    color: #fff;
+    position: relative;
+    text-decoration: none;
+    background-size: cover;
+    display: block;
+    overflow: hidden;
+    margin-bottom: 28px;
+    @media ($bp-larger-than-tablet) {
+      display: block;
+      
+    }
+    &:before{
+      display: inline-block;
+      content: "";
+      position: absolute;
+      left: 8px;
+      bottom: 0px;
+      opacity: 0.5;
+      @include sprite($icon-panel-plane);
+      @media ($bp-larger-than-desktophd) {
+        left: -10px;
+        bottom: 12px;
+      }
+    }
+    &:after{
+      display: inline-block;
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      border-radius: 15px;
+      background-color: $blue;
+      z-index: 2;
+      opacity: 0.2;
+      transition: $anim;
+    }
+    &:hover{
+      color: #fff;
+      &:after{
+        opacity: 0;
+      }
+      .panel-gruz200-arrow{
+        transform: translate(10px, -50%);
+      }
+    }
+    &__box{
+      position: relative;
+      z-index: 10;
+      display: flex;
+      padding: 23px 50px 20px 29px;
+      justify-content: center;
+      flex-direction: column;
+      text-align: left;
+      @media ($bp-larger-than-tablet) {
+        height: 108px;
+        padding: 20px 20px 20px 172px;
+      }
+    }
+    &__caption{
+      text-transform: uppercase;
+      font-size: 13px;
+      font-weight: 900;
+      margin-bottom: 11px;
+      @media ($bp-larger-than-tablet) {
+        margin-bottom: 8px;
+        font-size: 18px;
+      }
+    }
+    &__text{
+      font-size: 14px;
+      color: #b8c6df;
+      @media ($bp-larger-than-tablet) {
+        font-size: 18px;
+      }
+    }
+  
+  }
+  
+  .panel-gruz200-arrow{
+    position: absolute;
+    right: 34px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 54px;
+    height: 66px;
+    transition: $cubic;
+    display: none;
+    @media ($bp-larger-than-tablet) {
+      display: block;
+    }
+    &:before{
+      position: absolute;
+      display: inline-block;
+      content: "";
+      @include sprite($white-arrow);
+      top: 0;
+      left: 0;
+      opacity: 0.1;
+    }
+    &:after{
+      position: absolute;
+      display: inline-block;
+      content: "";
+      @include sprite($white-arrow);
+      top: 0;
+      left: 10px;
+      opacity: 0.4;
+    }
+    &__inner{
+      &:before{
+        position: absolute;
+        display: inline-block;
+        content: "";
+        @include sprite($white-arrow);
+        top: 0;
+        left: 20px;
+        opacity: 0.7;
+      }
+      &:after{
+        position: absolute;
+        display: inline-block;
+        content: "";
+        @include sprite($white-arrow);
+        top: 0;
+        left: 30px;
+        opacity: 1;
+      }
+    }
+  }
+  
+  .panel-gruz200-arrow-small{
+    position: absolute;
+    right: 13px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 48px;
+    transition: $cubic;
+    display: block;
+    @media ($bp-larger-than-tablet) {
+      display: none;
+    }
+    &:before{
+      position: absolute;
+      display: inline-block;
+      content: "";
+      @include sprite($white-arrow-small);
+      top: 0;
+      left: 0;
+      opacity: 0.1;
+    }
+    &:after{
+      position: absolute;
+      display: inline-block;
+      content: "";
+      @include sprite($white-arrow-small);
+      top: 0;
+      left: 7px;
+      opacity: 0.4;
+    }
+    &__inner{
+      &:before{
+        position: absolute;
+        display: inline-block;
+        content: "";
+        @include sprite($white-arrow-small);
+        top: 0;
+        left: 14px;
+        opacity: 0.7;
+      }
+      &:after{
+        position: absolute;
+        display: inline-block;
+        content: "";
+        @include sprite($white-arrow-small);
+        top: 0;
+        left: 21px;
+        opacity: 1;
+      }
+    }
+  }
+
+  .service-200-white{
+    padding: 16px 0 30px;
+  }
+  .gruz-200{
+      &__columns{
+          display: flex;
+          margin-left: -15px;
+          margin-right: -15px;
+          margin-bottom: 22px
+      }
+      &__col{
+          padding-left: 15px;
+          padding-right: 15px;
+          width: 100%;
+          h3{
+              text-transform: uppercase;
+          }
+      }
+  }
+
+  .service-200-docs{
+      padding-top: 30px;
+      margin-bottom: 35px;
+  }
+
+  .docs-200{
+      margin-bottom: 40px;
+      &__header{
+          background-color: #e9eef4;
+          display: flex;
+          padding: 18px 26px;
+          border-radius: 14px;
+      }
+      &__title{
+          font-size: 18px;
+          font-weight: 900;
+          text-transform: uppercase;
+          color: $blue;
+          width: 100%;
+      }
+      &__row{
+        display: flex;
+        padding: 24px 26px 24px;
+        &--alt{
+            background-color: #f6f8fb;
+            border-radius: 14px;
+        }
+      }
+      &__key{
+          width: 100%;
+          font-size: 15px;
+          font-weight: 900;
+      }
+      &__value{
+          width: 100%;
+          font-size: 15px;
+          ul{
+              list-style-type: none;
+              margin: 0;
+              li{
+                  padding-left: 20px;
+                  position: relative;
+                  &:before{
+                      display: inline-block;
+                      content: "";
+                      width: 10px;
+                      height: 1px;
+                      background-color: #444;
+                      position: absolute;
+                      left: 2px;
+                      top: 11px;
+                  }
+                  +li{
+                      margin-top: 14px;
+                      margin-bottom: 0;
+                  }
+              }
+          }
+      }
+  }
