--- a/src/assets/template/css/modules/_gruz200.scss
+++ b/src/assets/template/css/modules/_gruz200.scss
@@ -1,20 +1,42 @@
 .service-200{
     background-color: $light-blue;
-    padding: 35px 0 50px;
+    padding: 35px 0 35px;
+    @media($bp-larger-than-desktop) {
+        padding: 35px 0 50px;
+    }
     &__items{
         display: flex;
         justify-content: space-between;
-        margin-left: -15px;
-        margin-right: -15px;
-        margin-bottom: 35px;
+        flex-direction: column;
+        @media($bp-larger-than-tablet) {
+            flex-wrap: wrap;
+            margin-left: -15px;
+            margin-right: -15px;
+            flex-direction: row;
+            margin-bottom: 35px;
+        }
+        @media($bp-larger-than-desktop) {
+            flex-wrap: nowrap;
+        }
     }
     &__item{
-        padding-left: 15px;
-        padding-right: 15px;
-        flex: 1 1 100%;
+        width: 100%;
+        margin-bottom: 30px;
+        @media($bp-larger-than-tablet) {
+            width: 50%;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+        @media($bp-larger-than-desktop) {
+            width: 100%;
+            margin-bottom: 0;
+        }
     }
     &__card{
-        padding-left: 58px;
+        padding-left: 68px;
+        @media($bp-larger-than-mobile) {
+            padding-left: 58px;
+        }
         position: relative;
         &:before{
             content: "";
@@ -24,6 +46,7 @@
             top: 0;
         }
         &--1{
+            
             &:before{
                 background: transparent url('/assets/template/images/gruz200/item-1.png') left top no-repeat;
                 left: 2px;
@@ -68,13 +91,21 @@
     &__grid{
         margin-left: -15px;
         margin-right: -15px;
-        display: flex;
         margin-bottom: 30px;
+        @media($bp-larger-than-tablet) {
+            display: flex;
+        }
     }
     &__col{
         padding-left: 15px;
         padding-right: 15px;
         width: 100%;
+        +.service-200__col{
+            margin-top: 30px;
+            @media($bp-larger-than-tablet) {
+                margin-top: 0;
+            }
+        }
     }
     &__panel{
         background-color: #fff;
@@ -84,18 +115,34 @@
         height: 100%;
     }
     &__caption{
-        font-size: 18px;
+        font-size: 16px;
         text-transform: uppercase;
         color: $blue;
         font-weight: 900;
         margin-bottom: 18px;
+        text-align: center;
+        @media($bp-larger-than-mobile) {
+            font-size: 18px;
+            text-align: left;
+        }
     }
     ol{
         &.styled{
             margin-bottom: 0;
             li{
                 margin-bottom: 11px;
-                padding-left: 42px;
+                padding-left: 34px;
+                font-size: 12px;
+                @media($bp-larger-than-mobile) {
+                    padding-left: 42px;
+                    font-size: 14px;
+                }
+                &:before{
+                    font-size: 16px;
+                    @media($bp-larger-than-mobile) {
+                        font-size: 20px;
+                    }   
+                }
             }
         }
     }
@@ -110,25 +157,39 @@
     &__caption{
         color: #222;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 900;
         margin-bottom: 9px;
+        @media($bp-larger-than-tablet) {
+            font-size: 16px;
+        }
+        @media($bp-larger-than-desktop) {
+            font-size: 18px;
+        }
     }
     &__info{
         color: #777474;
-        font-size: 14px;
+        font-size: 12px;
         margin-bottom: 29px;
+        @media($bp-larger-than-mobile) {
+            font-size: 14px;
+        }
     }
     &__grid{
-        display: flex;
-        margin-left: -10px;
-        margin-right: -10px;
+        @media($bp-larger-than-tablet) {
+            display: flex;
+            margin-left: -10px;
+            margin-right: -10px;
+        }
     }
     &__input-item{
-        flex: 1 1 100%;
-        margin-bottom: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
+        margin-bottom: 20px;
+        @media($bp-larger-than-tablet) {
+            margin-bottom: 10px;
+            flex: 1 1 100%;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
         input[type="text"]{
             height: 54px;
             line-height: 54px;
@@ -142,10 +203,13 @@
     }
     &__fz152{
         text-align: center;
-        font-size: 13px;
+        font-size: 11px;
         padding-left: 20px;
         padding-right: 20px;
         margin-top: 14px;
+        @media($bp-larger-than-mobile) {
+            font-size: 13px;
+        }
     }
 }
 
@@ -211,6 +275,9 @@
       flex-direction: column;
       text-align: left;
       @media ($bp-larger-than-tablet) {
+        padding: 20px 20px 20px 100px;  
+      }
+      @media ($bp-larger-than-desktop) {
         height: 108px;
         padding: 20px 20px 20px 172px;
       }
@@ -341,13 +408,18 @@
 
   .service-200-white{
     padding: 16px 0 30px;
+    @media($bp-larger-than-mobile) {
+        display: block;
+    }
   }
   .gruz-200{
       &__columns{
+        @media($bp-larger-than-tablet) {
           display: flex;
           margin-left: -15px;
           margin-right: -15px;
           margin-bottom: 22px
+        }
       }
       &__col{
           padding-left: 15px;
@@ -368,20 +440,43 @@
       margin-bottom: 40px;
       &__header{
           background-color: #e9eef4;
-          display: flex;
-          padding: 18px 26px;
+          padding: 10px 18px;
           border-radius: 14px;
+          @media($bp-larger-than-tablet) {
+            padding: 18px 26px;
+            display: flex;
+          }
       }
       &__title{
-          font-size: 18px;
+          font-size: 12px;
           font-weight: 900;
           text-transform: uppercase;
           color: $blue;
           width: 100%;
+          @media($bp-larger-than-tablet) {
+            font-size: 14px;
+          }
+          @media($bp-larger-than-desktop) {
+            font-size: 18px;
+          }
+          +.docs-200__title{
+              margin-top: 6px;
+              padding-top: 6px;
+              border-top: 1px solid #ccc;
+              @media($bp-larger-than-tablet) {
+                  padding: 0;
+                  margin: 0;
+                  border: 0 none;
+                  margin-top: 0;
+              }
+          }
       }
       &__row{
-        display: flex;
-        padding: 24px 26px 24px;
+        padding: 10px 18px;
+        @media($bp-larger-than-tablet) {
+            display: flex;
+            padding: 24px 26px 24px;
+        }
         &--alt{
             background-color: #f6f8fb;
             border-radius: 14px;
@@ -389,12 +484,27 @@
       }
       &__key{
           width: 100%;
-          font-size: 15px;
+          font-size: 13px;
           font-weight: 900;
+          @media($bp-larger-than-tablet) {
+            font-size: 15px;
+            padding-right: 15px;
+          }
       }
       &__value{
-          width: 100%;
-          font-size: 15px;
+            width: 100%;
+            font-size: 15px;
+            margin-top: 6px;
+            padding-top: 6px;
+            border-top: 1px solid #eee;
+            font-size: 13px;
+            @media($bp-larger-than-tablet) {
+                font-size: 14px;
+                padding: 0;
+                margin: 0;
+                border: 0 none;
+                margin-top: 0;
+            }
           ul{
               list-style-type: none;
               margin: 0;
@@ -412,8 +522,11 @@
                       top: 11px;
                   }
                   +li{
+                    margin-top: 0;
+                    @media($bp-larger-than-tablet) {
                       margin-top: 14px;
-                      margin-bottom: 0;
+                    }
+                      
                   }
               }
           }
